<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="height"
            type="java.lang.String" />

        <variable
            name="weight"
            type="java.lang.String" />

        <variable
            name="body_mass_index"
            type="java.lang.String" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".BodyMassIndexActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10sp"
                android:text="@string/height_label"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10sp"
                android:text="@{height}"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10sp"
                android:text="@string/weight_label"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10sp"
                android:text="@{weight}"
                android:textSize="20sp" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:text="@string/body_mass_index_title"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="36sp" />

        <TextView
            android:id="@+id/body_mass_index"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:layout_marginBottom="10sp"
            android:text="@{body_mass_index}"
            android:textAlignment="center"
            android:textSize="36sp" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:divider="@color/black"
            android:showDividers="middle"
            android:stretchColumns="1">

            <TableRow android:id="@+id/underweight_row">

                <TextView
                    android:padding="10sp"
                    android:text="@string/less_than_18_5_label" />

                <TextView
                    android:gravity="center"
                    android:padding="10sp"
                    android:text="@string/underweight_label" />

            </TableRow>

            <TableRow android:id="@+id/normal_weight_row">

                <TextView
                    android:padding="10sp"
                    android:text="@string/between_18_5_and_24_9" />

                <TextView
                    android:gravity="center"
                    android:padding="10sp"
                    android:text="@string/normal_weight_label" />

            </TableRow>

            <TableRow android:id="@+id/overweight_row">

                <TextView
                    android:padding="10sp"
                    android:text="@string/between_25_0_and_29_9" />

                <TextView
                    android:gravity="center"
                    android:padding="10sp"
                    android:text="@string/overweight_label" />

            </TableRow>

            <TableRow android:id="@+id/type_one_obesity">

                <TextView
                    android:padding="10sp"
                    android:text="@string/between_30_0_and_34_9" />

                <TextView
                    android:gravity="center"
                    android:padding="10sp"
                    android:text="@string/type_one_obesity_label" />

            </TableRow>

            <TableRow android:id="@+id/type_two_obesity">

                <TextView
                    android:padding="10sp"
                    android:text="@string/between_35_0_and_39_9" />

                <TextView
                    android:gravity="center"
                    android:padding="10sp"
                    android:text="@string/type_two_obesity_label" />

            </TableRow>

            <TableRow android:id="@+id/type_three_obesity">

                <TextView
                    android:padding="10sp"
                    android:text="@string/more_than_40" />

                <TextView
                    android:gravity="center"
                    android:padding="10sp"
                    android:text="@string/type_three_obesity_label" />

            </TableRow>

        </TableLayout>

    </LinearLayout>

</layout>