<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data></data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="@string/height_label"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/height_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/height_in_centimeters_label"
            android:inputType="number"
            android:padding="20dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="@string/weight_label"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/weight_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/weight_in_kilograms_label"
            android:inputType="number"
            android:padding="20dp" />

        <TextView
            android:id="@+id/body_mass_index_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:textSize="20sp" />

        <Button
            android:id="@+id/calculate_body_mass_index_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/calculate_body_mass_index_button"
            android:textSize="20sp" />

    </LinearLayout>
</layout>